# hson

./: .gitignore  AGENTS.md  CHALLENGES.md  LEARNING_LOG.md  LICENSE  README.md  cabal.project  hie.yaml  hson.cabal
app/: Main.hs  MegaMain.hs
examples/: escape.json  large.json  nested.json  rfc8259.json  sample.json  user.json
src/Hson/: Class.hs  MegaParser.hs  Parser.hs  Query.hs  ToJson.hs  Types.hs
test/: Spec.hs
